force-app/main/default/objects/CoverageBenefit__c/CoverageBenefit__c.object-meta.xml
<CustomObject>
    <description>Represents the benefits provided to a covered member by a purchaser’s plan.</description>
    <label>Coverage Benefit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoverageBenefit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>