force-app/main/default/objects/CoverageBenefit__c/fields/EmergencyDepartmentCopay__c.field-meta.xml
<CustomField>
    <fullName>EmergencyDepartmentCopay__c</fullName>
    <inlineHelpText>Patient&apos;s portion of payment for using emergency department services.</inlineHelpText>
    <label>Emergency Department Copay Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>