force-app/main/default/objects/CoverageBenefit__c/fields/FamilyInNetworkDeductibleApplied__c.field-meta.xml
<CustomField>
    <fullName>FamilyInNetworkDeductibleApplied__c</fullName>
    <inlineHelpText>The amount the member has paid for health care provided by the health plan’s preferred providers for all family members.</inlineHelpText>
    <label>Family InNetwork Deductible Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>