force-app/main/default/objects/CoverageBenefit__c/fields/FamilyInNetworkDeductibleRemaining__c.field-meta.xml
<CustomField>
    <fullName>FamilyInNetworkDeductibleRemaining__c</fullName>
    <inlineHelpText>The amount the member still has to pay for health care provided by the health plan’s preferred providers for all family members. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family InNetwork Deductible Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>