force-app/main/default/objects/CoverageBenefit__c/fields/FamilyInNetworkOutofPocketApplied__c.field-meta.xml
<CustomField>
    <fullName>FamilyInNetworkOutofPocketApplied__c</fullName>
    <inlineHelpText>The amount of the member has paid in this coverage year for health care provided by the health plan’s preferred providers for all family members. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Family InNetwork OutofPocket Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>