force-app/main/default/objects/CoverageBenefit__c/fields/FamilyInNetworkOutofPocketLimit__c.field-meta.xml
<CustomField>
    <fullName>FamilyInNetworkOutofPocketLimit__c</fullName>
    <inlineHelpText>The most the member pays during the coverage year for health care provided by the health plan’s preferred providers for all family members. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Family InNetwork OutofPocket Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>