force-app/main/default/objects/CoverageBenefit__c/fields/FamilyInNetworkOutofPocketRemaining__c.field-meta.xml
<CustomField>
    <fullName>FamilyInNetworkOutofPocketRemaining__c</fullName>
    <inlineHelpText>The remaining amount for the member to pay during this coverage year for care provided by the plan’s preferred providers for all family members. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family InNetwork OutofPocket Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>