force-app/main/default/objects/CoverageBenefit__c/fields/FamilyOutofNetworkDeductibleApplied__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkDeductibleApplied__c</fullName>
    <inlineHelpText>The amount the member has paid for health care provided by non-preferred providers for all family members.</inlineHelpText>
    <label>Family OutofNetwork Deductible Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>