force-app/main/default/objects/CoverageBenefit__c/fields/FamilyOutofNetworkDeductibleLimit__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkDeductibleLimit__c</fullName>
    <inlineHelpText>The total amount the member has to pay for health care provided by non-preferred providers for all family members. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family OutofNetwork Deductible Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>