force-app/main/default/objects/CoverageBenefit__c/fields/FamilyOutofNetworkDeductibleRemaining__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkDeductibleRemaining__c</fullName>
    <inlineHelpText>The amount the member still has to pay for health care provided by non-preferred providers for all family members. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family OutofNetwork Deductible Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>