force-app/main/default/objects/CoverageBenefit__c/fields/FamilyOutofNetworkOutofPocketApplied__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkOutofPocketApplied__c</fullName>
    <inlineHelpText>The amount of the member has paid in this coverage year for health care provided by non-preferred providers for all family members. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Family OutofNetwork OutofPocket Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>