force-app/main/default/objects/CoverageBenefit__c/fields/FamilyOutofNetworkOutofPocketLimit__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkOutofPocketLimit__c</fullName>
    <inlineHelpText>The most a member pays during a coverage year for health care provided by non-preferred providers for all family members. It includes deductibles, copayments, and coinsurance, but is in addition to premiums.</inlineHelpText>
    <label>Family OutofNetwork OutofPocket Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>