force-app/main/default/objects/CoverageBenefit__c/fields/FamilyOutofNetworkOutofPocketRemaining__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkOutofPocketRemaining__c</fullName>
    <inlineHelpText>The remaining amount for the member to pay during this coverage period for health care provided by non-preferred providers for all family members. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family OutofNetwork OutofPocket Remain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>