force-app/main/default/objects/CoverageBenefit__c/fields/IndividualInNetworkDeductibleApplied__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkDeductibleApplied__c</fullName>
    <inlineHelpText>The amount the member has paid for health care provided by the health plan’s preferred providers to the most costly family member.</inlineHelpText>
    <label>Individual InNetwork Deductible Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>