force-app/main/default/objects/CoverageBenefit__c/fields/IndividualInNetworkDeductibleLimit__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkDeductibleLimit__c</fullName>
    <inlineHelpText>The amount the member has to pay for health care provided by the plan’s preferred providers for any family member. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Individual In Network Deductible Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>