force-app/main/default/objects/CoverageBenefit__c/fields/IndividualInNetworkDeductibleRemain__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkDeductibleRemain__c</fullName>
    <inlineHelpText>The remaining amount the member has to pay for care during the coverage year provided by the plan’s preferred providers for any family member. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Individual InNetwork Deductible Remain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>