force-app/main/default/objects/CoverageBenefit__c/fields/IndividualInNetworkOutofPocketApplied__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkOutofPocketApplied__c</fullName>
    <inlineHelpText>The amount of the member has paid in this coverage year for health care provided by the plan’s preferred providers to any one family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Ind InNetwork OOP Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>