force-app/main/default/objects/CoverageBenefit__c/fields/IndividualInNetworkOutofPocketLimit__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkOutofPocketLimit__c</fullName>
    <inlineHelpText>The most the member pays during the coverage year for health care provided by the health plan’s preferred providers for any family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Ind InNetwork OOP Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>