force-app/main/default/objects/CoverageBenefit__c/fields/IndividualInNetworkOutofPocketRemaining__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkOutofPocketRemaining__c</fullName>
    <inlineHelpText>The amount remaining for the member to pay during the coverage year for care provided by the plan’s preferred providers for any family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Ind InNetwork OOP Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>