force-app/main/default/objects/CoverageBenefit__c/fields/IndividualOutofNetworkDeductibleApplied__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkDeductibleApplied__c</fullName>
    <inlineHelpText>The amount the member has paid for health care provided by non-preferred providers to the most costly family member.</inlineHelpText>
    <label>Individual OutofNetwork Deduct Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>