force-app/main/default/objects/CoverageBenefit__c/fields/IndividualOutofNetworkDeductibleLimit__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkDeductibleLimit__c</fullName>
    <inlineHelpText>The amount the member has to pay for health care provided by non-preferred providers to any one family member. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Individual OutofNetwork Deduct Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>