force-app/main/default/objects/CoverageBenefit__c/fields/IndividualOutofNetworkDeductibleRemain__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkDeductibleRemain__c</fullName>
    <inlineHelpText>=The remaining amount the member has to pay for health care during the coverage year provided by non-preferred providers to any family member. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Individual OutofNetwork Deduct Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>