force-app/main/default/objects/CoverageBenefit__c/fields/IndividualOutofNetworkOutofPocketApplied__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkOutofPocketApplied__c</fullName>
    <inlineHelpText>The amount of the member has paid in this coverage period for health care provided by non-preferred providers to any family members. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Individual OutofNetwork OOP Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>