force-app/main/default/objects/CoverageBenefit__c/fields/IndividualOutofNetworkOutofPocketLimit__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkOutofPocketLimit__c</fullName>
    <inlineHelpText>The most the member pays during the coverage year for health care provided by non-preferred providers to any family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Individual OutofNetwork OOP Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>