force-app/main/default/objects/CoverageBenefit__c/fields/IndividualOutofNetworkOutofPocketRemain__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkOutofPocketRemain__c</fullName>
    <inlineHelpText>The amount remaining for the member to pay during the coverage year for health care provided by non-preferred providers to any family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Individual OutofNetwork OOP Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>