force-app/main/default/objects/CoverageBenefit__c/fields/InNetworkCoinsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>InNetworkCoinsuranceAmount__c</fullName>
    <inlineHelpText>The amount a member contributes towards each treatment undertaken by the health plan’s preferred providers.</inlineHelpText>
    <label>InNetwork Coinsurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>