force-app/main/default/objects/CoverageBenefit__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <inlineHelpText>The ID of the member receiving these benefits.</inlineHelpText>
    <label>MemberId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MemberIdAccount</relationshipLabel>
    <relationshipName>MemberIdAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>