force-app/main/default/objects/CoverageBenefit__c/fields/MemberPlanId__c.field-meta.xml
<CustomField>
    <fullName>MemberPlanId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The ID of the member plan receiving these benefits.</inlineHelpText>
    <label>MemberPlanId</label>
    <referenceTo>MemberPlan__c</referenceTo>
    <relationshipLabel>MemberPlanIdLookup</relationshipLabel>
    <relationshipName>MemberPlanIdLookup</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>