force-app/main/default/objects/CoverageBenefit__c/fields/OutofNetworkLifetimeMaximum__c.field-meta.xml
<CustomField>
    <fullName>OutofNetworkLifetimeMaximum__c</fullName>
    <inlineHelpText>The most a member pays during the lifetime membership on this plan for health care provided by non-preferred providers. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>OutofNetwork Lifetime Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>