force-app/main/default/objects/CoverageBenefit__c/fields/SpecialistCopay__c.field-meta.xml
<CustomField>
    <fullName>SpecialistCopay__c</fullName>
    <inlineHelpText>The amount a member contributes towards specialist consultations.</inlineHelpText>
    <label>Specialist Copay Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>